Fix subpage visibility in profile sections

--- a/accounts/static/perfil/css/perfil.css
+++ b/accounts/static/perfil/css/perfil.css
@@ -237,6 +237,9 @@
 .perfil-section {
   display: none;
 }
+.perfil-section.active {
+  display: block;
+}
 
 #informacoes-pessoais {
   display: block;
